# mikmik19.github.io

./: CV.md  _config.yml  index.html  package-lock.json  package.json
_drafts/: 2020-08-7-designing-a-forest-garden.md  2020-11-28-my-life-in-weeks.md  2020-12-25-oscilloscope-the-game.md  2020-12-26-ten-years-of-reading-regularly.md  2020-12-30-generative-logo.md  2021-01-29-investment-portfolio.md  2021-12-15-2021-in-review.md  2022-01-01-getting-into-shaders.md  2022-01-01-template.md
_posts/: 2021-12-15-2021-in-review.md  2021-12-31-2021-in-review.md  2022-01-27-questionable-weather.md
css/: investment-portfolio.css  my-life-in-weeks.css  questionable-weather.css
data/2021-in-review/: books.csv
data/places-ive-been/: been.csv
etffinder/: pyproject.toml
etffinder/data/raw/: RBOT.csv
etffinder/scripts/: fetch_ishares.py  parse_data.py
js/2021-in-review/: 2021-in-review.js
js/questionable-weather/: script.js
js/shaders/: shader-example.js
notebooks/real-estate/: pyproject.toml  streets.csv
