[tool.poetry]
name = "etffinder"
version = "0.1.0"
description = ""
authors = ["Mikkel Hansen <mikkelheart@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"
numpy = "^1.22.0"
requests = "^2.25.1"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
